# AetherSpin

./: .editorconfig  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Evaluation1.MD  Evaluation2.MD  Evaluation3.MD  Evaluation4.MD  Evaluation5.MD  Evaluation6.MD  Evaluation7.MD  LICENSE  README.md  REPO-OVERVIEW.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  turbo.json
.github/: CODEOWNERS  (+2 more)
math/: README.md  pyproject.toml  requirements.txt
math/games/cosmicways/: game_calculations.py  game_config.py  game_events.py  game_executables.py  game_optimization.py  game_override.py  gamestate.py  run.py  run_config.toml
math/games/novaforged/: game_calculations.py  game_config.py  game_events.py  game_executables.py  game_optimization.py  game_override.py  gamestate.py  run.py  run_config.toml
math/scripts/: gen_golden_corpus.py  generate_books.py  generate_par_sheet.py  generate_white_paper.py  optimize.py  simulate.py  validate_books.py  validate_rtp.py  validate_sdk_books.py
math/simulator/: __init__.py  bookcontract.py  definition.py  engine.py  library.py  mechanics.py  reels.py  rng.py  runner.py
math/tests/: test_engine.py  test_event_contract.py  test_event_contract_cluster.py  test_event_contract_ways.py  test_golden_books.py  test_mechanics.py  test_parity.py  test_properties.py  test_rtp_gate.py  test_sdk_book_contract.py  test_sdk_executables.py  test_sdk_multiplier_wilds.py  test_version_consistency.py
(+172 files in other folders)
