[project]
name = "aetherspin-math"
version = "1.0.0"
description = "AetherSpin standalone slot math engine + Stake Engine math-sdk game implementations"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["simulator", "."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["engine", "library"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# Static typing for the standalone engine (the certifiable math core). The
# games/<id> files target the official SDK (src.* imports) and are excluded.
[tool.mypy]
python_version = "3.11"
files = ["simulator"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
